2009-02-18  Jaroslav Hajek  <highegg@gmail.com>

	* oct-inttypes.cc (pow (const octave_int<T>&, const octave_int<T>&)):
	Use octave_int comparisons to avoid warning for unsigned types.

2009-02-17  Jaroslav Hajek  <highegg@gmail.com>

	* Array.cc (Array<T>::resize (const dim_vector&)): Remove dead branch.

2009-02-17  Jaroslav Hajek  <highegg@gmail.com>

	* mx-inlines.cc (OP_CUM_FCN, OP_CUM_FCN2, OP_CUM_FCNN):
	Add TSRC/TRES parameters.
	(mx_inline_cumcount): New function.
	* intNDArray.cc (intNDArray::cumsum): New method.
	* intNDArray.h: Declare it.
	* boolNDArray.cc (boolNDArray::cumsum): New method.
	* boolNDArray.h: Declare it.

2009-02-17  Jaroslav Hajek  <highegg@gmail.com>

	* mx-inlines.cc (OP_CUMMINMAX_FCN, OP_CUMMINMAX_FCN2,
	OP_CUMMINMAX_FCNN): New macros.
	(mx_inline_cummax, mx_inline_cummin, do_mx_cumminmax_op):
	New overloaded template functions.

	* dNDArray.cc (NDArray::cummin, NDArray::cummax): New methods.
	* dNDArray.h: Declare them.

	* fNDArray.cc (FloatNDArray::cummin, FloatNDArray::cummax): New
	methods.
	* fNDArray.h: Declare them.

	* CNDArray.cc (ComplexNDArray::cummin, ComplexNDArray::cummax): New
	methods.
	* CNDArray.h: Declare them.

	* fCNDArray.cc (FloatComplexNDArray::cummin,
	FloatComplexNDArray::cummax): New methods.
	* fCNDArray.h: Declare them.

	* intNDArray.cc (intNDArray::cummin, intNDArray::cummax): New methods.
	* intNDArray.h: Declare them.

2009-02-17  Jaroslav Hajek  <highegg@gmail.com>

	* mx-inlines.cc (OP_MINMAX_FCN): Correct behaviour with NaNs.

2009-02-17  Jaroslav Hajek  <highegg@gmail.com>

	* MArray-defs.h: Move declarative part to MArray-decl.h
	* MArray-decl.h: New source.

	* mx-op-defs.h: Move declarative part to mx-op-decl.h.
	* mx-op-decl.h: New source.

	* Makefile.in: Include new sources in build.
	* mk-ops.awk: Include mx-op-decl.h in headers, mx-op-defs in .cc
	files.

	* CMatrix.cc, CMatrix.h, CNDArray.cc, CNDArray.h, MArray.h, MArray2.h,